# Rt_Knits_AI_Challenge

./: README.md
cmms_backend/: .env  Dockerfile  Makefile  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
cmms_backend/alembic/: env.py
cmms_backend/alembic/versions/: 0001_initial_schema.py
cmms_backend/app/: main.py
cmms_backend/app/agents/: __init__.py  analytics_agent.py  base.py  dispatch_agent.py  intake_agent.py  knowledge_agent.py  orchestrator.py  planning_agent.py  triage_agent.py
cmms_backend/app/api/: analytics.py  assets.py  knowledge.py  planning.py  technicians.py  webhook.py  work_orders.py
cmms_backend/app/core/: config.py  logging.py
cmms_backend/app/db/: base.py  base_class.py  session.py
cmms_backend/app/db/models/: __init__.py  asset.py  assignment.py  daily_plan.py  department.py  feedback.py  (+5 more)
cmms_backend/app/schemas/: __init__.py  agents.py  asset.py  assignment.py  base.py  daily_plan.py  department.py  feedback.py  knowledge_doc.py  requester.py  task_request.py  technician.py  whatsapp.py  work_order.py
cmms_backend/app/services/: escalation.py  rating_gate.py  requester_resolver.py  reward.py  scheduler.py  whatsapp.py
cmms_backend/data/: .gitkeep
cmms_backend/docs/: diagrams.md
cmms_backend/docs/generate/: agent_flow_diagram.py  api_map_diagram.py  arch_diagram.py  colors.py  data_flow_diagram.py  erd_diagram.py  flow_diagram.py  report.py  run_all.py  style.py
cmms_backend/rt_knits_cmms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cmms_backend/tests/: conftest.py  test_analytics_api.py  test_assets_api.py  test_health.py  test_loaders.py  test_rating_gate.py  test_reward.py  test_technicians_api.py  test_webhook_verification.py  test_work_orders_api.py
(+7 files in other folders)
