[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "rt-knits-cmms"
version = "1.0.0"
description = "RT Knits Agentic WhatsApp CMMS — CBBR-NATEC Innovation Cup"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",

    # Database
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",

    # Pydantic
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # LangGraph / LangChain
    "langgraph==0.1.5",
    "langchain==0.2.1",
    "langchain-openai==0.1.7",
    "langchain-community==0.2.1",

    # Vector store
    "chromadb==0.5.0",
    "pgvector==0.2.5",

    # Scheduler
    "apscheduler==3.10.4",

    # Multimodal / AI
    "openai==1.30.1",
    "pillow==10.3.0",

    # WhatsApp / messaging
    "twilio==9.1.0",

    # Excel seed data
    "openpyxl==3.1.2",
    "pandas==2.2.2",

    # Utilities
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "tenacity==8.3.0",
    "structlog==24.1.0",
    "pytz==2024.1",
    "aiosqlite==0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
    "aiosqlite==0.20.0",
    "black==24.4.2",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
